--- a/webpage/index.html
+++ b/webpage/index.html
@@ -6,70 +6,68 @@
     <!-- 引入 echarts.js -->
     <script src="echarts.min.js"></script>
     <script src="jquery-2.1.1.min.js"></script>
+    <script src="roma.js"></script>
 </head>
 <body>
-    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-    <div id="main" style="width: 600px;height:400px;"></div>
-    <script type="text/javascript">
-        // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('main'));
+<!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+<div id="main" style="width: 100%;height:1000px;"></div>
+<script type="text/javascript">
+    // 基于准备好的dom，初始化echarts实例
+    var myChart = echarts.init(document.getElementById('main'), 'roma');
 
-myChart.showLoading();
-$.getJSON('http://echarts.baidu.com/data/asset/data/npmdepgraph.min10.json', function (json) {
-    myChart.hideLoading();
-    myChart.setOption(option = {
-        title: {
-            text: 'NPM Dependencies'
-        },
-        animationDurationUpdate: 1500,
-        animationEasingUpdate: 'quinticInOut',
-        series : [
-            {
-                type: 'graph',
-                layout: 'none',
-                // progressiveThreshold: 700,
-                data: json.nodes.map(function (node) {
-                    return {
-                        x: node.x,
-                        y: node.y,
-                        id: node.id,
-                        name: node.label,
-                        symbolSize: node.size,
-                        itemStyle: {
-                            normal: {
-                                color: node.color
+    myChart.showLoading();
+    $.getJSON('https://raw.githubusercontent.com/MyXOF/info-extraction/master/json/data.json', function (json) {
+        myChart.hideLoading();
+        myChart.setOption(option = {
+            title: {
+                text: 'NPM Dependencies'
+            },
+            animationDurationUpdate: 1500,
+            animationEasingUpdate: 'quinticInOut',
+            series: [
+                {
+                    type: 'graph',
+                    layout: 'none',
+                    // progressiveThreshold: 700,
+                    data: json.nodes.map(function (node) {
+                        return {
+                            x: node.x,
+                            y: node.y,
+                            id: node.id,
+                            name: node.label,
+                            symbolSize: node.size,
+                            itemStyle: {
+                                normal: {
+                                    color: node.color
+                                }
                             }
+                        };
+                    }),
+                    edges: json.edges.map(function (edge) {
+                        return {
+                            source: edge.sourceID,
+                            target: edge.targetID
+                        };
+                    }),
+                    label: {
+                        emphasis: {
+                            position: 'right',
+                            show: true
                         }
-                    };
-                }),
-                edges: json.edges.map(function (edge) {
-                    return {
-                        source: edge.sourceID,
-                        target: edge.targetID
-                    };
-                }),
-                label: {
-                    emphasis: {
-                        position: 'right',
-                        show: true
-                    }
-                },
-                roam: true,
-                focusNodeAdjacency: true,
-                lineStyle: {
-                    normal: {
-                        width: 0.5,
-                        curveness: 0.3,
-                        opacity: 0.7
+                    },
+                    roam: true,
+                    focusNodeAdjacency: true,
+                    lineStyle: {
+                        normal: {
+                            width: 0.5,
+                            curveness: 0.3,
+                            opacity: 0.7
+                        }
                     }
                 }
-            }
-        ]
-    }, true);
-});
-
-        // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
-    </script>
+            ]
+        }, true);
+    });
+</script>
 </body>
 </html>
