--- a/webpage/index.html
+++ b/webpage/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-<div id="main" style="width: 100%;height:2000px;"></div>
+<div id="main" style="width: 100%;height:1200px;"></div>
 <script type="text/javascript">
     // 基于准备好的dom，初始化echarts实例
-    var myChart = echarts.init(document.getElementById('main'), 'roma');
+    var myChart = echarts.init(document.getElementById('main'),"roma");
 
     myChart.showLoading();
     $.getJSON('https://raw.githubusercontent.com/MyXOF/info-extraction/master/json/relationship.json', function (json) {
