--- a/webpage/index.html
+++ b/webpage/index.html
@@ -13,7 +13,7 @@
 <div id="main" style="width: 100%;height:1200px;"></div>
 <script type="text/javascript">
     // 基于准备好的dom，初始化echarts实例
-    var myChart = echarts.init(document.getElementById('main'),"roma");
+    var myChart = echarts.init(document.getElementById('main'), "roma");
 
     myChart.showLoading();
     $.getJSON('https://raw.githubusercontent.com/MyXOF/info-extraction/master/json/relationship.json', function (json) {
@@ -35,7 +35,7 @@
                             y: node.y,
                             id: node.id,
                             name: node.label,
-                            symbolSize: node.size,
+                            symbolSize: node.size/2,
                             itemStyle: {
                                 normal: {
                                     color: node.color
@@ -50,6 +50,17 @@
                         };
                     }),
                     label: {
+                        normal: {
+                            show: false,
+                            position: 'inside',
+                            textStyle: {
+                                color: '#000000',
+                                fontStyle: 'normal',
+                                fontWeight: 'normal',
+                                fontFamily: 'sans-serif',
+                                fontSize: 16
+                            }
+                        },
                         emphasis: {
                             position: 'right',
                             show: true
