--- a/webpage/index.html
+++ b/webpage/index.html
@@ -52,18 +52,18 @@
                     label: {
                         normal: {
                             show: false,
-                            position: 'inside',
-                            textStyle: {
-                                color: '#000000',
-                                fontStyle: 'normal',
-                                fontWeight: 'normal',
-                                fontFamily: 'sans-serif',
-                                fontSize: 16
-                            }
+                            position: 'inside'
                         },
                         emphasis: {
                             position: 'right',
-                            show: true
+                            show: true,
+                            textStyle: {
+                                color: '#000000',
+                                fontStyle: 'normal',
+                                fontWeight: 'bolder',
+                                fontFamily: 'sans-serif',
+                                fontSize: 16
+                            }
                         }
                     },
                     roam: true,
