change rule add change edges to 1-52

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -57,13 +57,13 @@
                         emphasis: {
                             position: 'right',
                             show: true,
-                            textStyle: {
-                                color: '#000000',
-                                fontStyle: 'normal',
-                                fontWeight: 'bolder',
-                                fontFamily: 'sans-serif',
-                                fontSize: 16
-                            }
+//                            textStyle: {
+//                                color: '#000000',
+//                                fontStyle: 'normal',
+//                                fontWeight: 'bolder',
+//                                fontFamily: 'sans-serif',
+//                                fontSize: 16
+//                            }
                         }
                     },
                     roam: true,
