--- a/webpage/index.html
+++ b/webpage/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>ECharts</title>
+    <title>京剧著名人物师徒关系</title>
     <!-- 引入 echarts.js -->
     <script src="echarts.min.js"></script>
     <script src="jquery-2.1.1.min.js"></script>
@@ -20,7 +20,7 @@
         myChart.hideLoading();
         myChart.setOption(option = {
             title: {
-                text: 'NPM Dependencies'
+                text: '京剧著名人物师徒关系'
             },
             animationDurationUpdate: 1500,
             animationEasingUpdate: 'quinticInOut',
