remove useless people name and theme

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -20,7 +20,7 @@
         myChart.hideLoading();
         myChart.setOption(option = {
             title: {
-                text: '京剧著名人物师徒关系'
+                text: '京剧著名人物师徒关系（部分）'
             },
             animationDurationUpdate: 1500,
             animationEasingUpdate: 'quinticInOut',
